force-app/main/default/objects/ScheduleOption__c/ScheduleOption__c.object-meta.xml
<CustomObject>
    <description>Schedule Option defines the schedule options that are available when building a Project. Schedule Option is related to Project and Job.</description>
    <label>Schedule Option</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>