force-app/main/default/objects/ScheduleOption__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Unique value that should be used within APEX code when referencing the Schedule Option.</description>
    <inlineHelpText>Unique value that should be used within APEX code when referencing the Schedule Option.</inlineHelpText>
    <label>Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>