force-app/main/default/objects/ScheduleOption__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the schedule option.</description>
    <inlineHelpText>Description of the Schedule Option.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>