force-app/main/default/objects/ScheduleOption__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Schedule Option is available at the org level to set visibility when building a Project.</description>
    <inlineHelpText>Indicates that the Schedule Option is available at the org level to set visibility when building a Project.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>