force-app/main/default/objects/ScheduleOption__c/validationRules/Scheduling_Option_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduling_Option_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>Please choose a valid Scheduling Option</errorMessage>
</ValidationRule>